tests/valid/aggregate/join_disaggregation_m2m_permuted.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "join_disaggregation_m2m_permuted",
    "description": "M2 cross-binding DETERMINISM conformance fixture (RFC semiring-faq-unified-ir §5.3 / §5.7 rule 5; bead ess-my4.2.5). The permuted-input twin of join_disaggregation_m2m.esm: the SAME many-to-many value-equality join with the members of both key sets reordered — `sources` = [oil, coal, coal] (coal now at positions {2,3}), `factors` = [gas, coal, coal] (coal at {2,3}). Value-equality matching is by member VALUE, not declared position, so the admitted set is still coal x coal = 2*2 = 4 and count(1) = 4 — IDENTICAL to the canonical-order fixture. A correct implementation buckets by key value (RFC A.6) and reduces with the associative+commutative semiring oplus, so permuting either relation cannot change the result; a buggy first-seen / position-dependent implementation would diverge. Asserting the identical expected=4 across the canonical and permuted fixtures is the cross-binding permuted-input -> identical-result determinism proof (Julia + Python; Rust m*n is M3, see the canonical fixture). Go/TS validate the additive join schema.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.nux"
    ],
    "tags": [
      "aggregate",
      "join",
      "semiring",
      "sum_product",
      "many-to-many",
      "determinism",
      "permutation-invariant",
      "disaggregation",
      "conformance",
      "ess-my4.2.5"
    ]
  },
  "models": {
    "DisaggregationPermuted": {
      "tolerance": {
        "rel": 1e-6,
        "abs": 1e-9
      },
      "index_sets": {
        "sources": {
          "kind": "categorical",
          "members": ["oil", "coal", "coal"]
        },
        "factors": {
          "kind": "categorical",
          "members": ["gas", "coal", "coal"]
        }
      },
      "variables": {
        "count": { "type": "state", "default": 0.0 }
      },
      "equations": [
        {
          "_comment": "Same join as join_disaggregation_m2m.esm with members reordered. coal still matches 2x2=4 by VALUE (now at positions {2,3} on each side). count(1)=4, identical to canonical order -> determinism.",
          "lhs": { "op": "D", "args": ["count"], "wrt": "t" },
          "rhs": {
            "op": "aggregate",
            "args": [],
            "output_idx": [],
            "semiring": "sum_product",
            "reduce": "+",
            "ranges": {
              "i": { "from": "sources" },
              "j": { "from": "factors" }
            },
            "join": [
              { "on": [["i", "j"]] }
            ],
            "expr": 1.0
          }
        }
      ],
      "tests": [
        {
          "id": "disaggregation_m2m_permuted_t1",
          "description": "Permuted member order, identical value-equality result: coal x coal = 2*2 = 4 admitted terms regardless of declared position. count(1)=4, matching the canonical fixture (determinism).",
          "initial_conditions": { "count": 0.0 },
          "time_span": { "start": 0.0, "end": 1.0 },
          "assertions": [
            { "variable": "count", "time": 1.0, "expected": 4.0 }
          ]
        }
      ]
    }
  }
}
