tests/invalid/aggregate/build_time/float_join_key.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "float_join_key",
    "description": "INVALID at BUILD TIME, not schema time (bead ess-my4.2.5; RFC semiring-faq-unified-ir §5.3 / §5.7 rule 1). A value-equality join over a categorical key set whose members are FLOATS: `keys` = [1.5, 2.5]. Floating-point join keys are forbidden because equality is not portable across bindings (a 5.0 repr is platform-dependent), exactly as floats are forbidden in Skolem/order keys. This is SCHEMA-VALID — the schema's categorical `members` is an untyped array, so Go/TS load it cleanly and it must NOT live alongside the schema-rejected fixtures in the parent directory (hence the build_time/ subdir, which the Go/TS non-recursive *.esm globs skip). The rejection is enforced by the EVALUATING bindings at build: Julia raises TreeWalkError, Python raises through simulate (success=False). Mirrors the engine-level unit tests in tree_walk_join_test.jl and test_numpy_interpreter_join.py.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.nux"
    ],
    "tags": [
      "aggregate",
      "join",
      "invalid",
      "build-time",
      "float-key",
      "ess-my4.2.5"
    ]
  },
  "models": {
    "FloatJoinKey": {
      "index_sets": {
        "keys": {
          "kind": "categorical",
          "members": [1.5, 2.5]
        }
      },
      "variables": {
        "count": { "type": "state", "default": 0.0 }
      },
      "equations": [
        {
          "_comment": "D(count)/dt = sum_{i,j in keys : member(i)==member(j)} 1, but `keys` has FLOAT members -> forbidden join key -> build-time rejection.",
          "lhs": { "op": "D", "args": ["count"], "wrt": "t" },
          "rhs": {
            "op": "aggregate",
            "args": [],
            "output_idx": [],
            "semiring": "sum_product",
            "reduce": "+",
            "ranges": {
              "i": { "from": "keys" },
              "j": { "from": "keys" }
            },
            "join": [
              { "on": [["i", "j"]] }
            ],
            "expr": 1.0
          }
        }
      ]
    }
  }
}
